# blog

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  check_git.sh  local-nginx.conf  makesite.py  makesite.spec  monitor.py  params-local.json  params.json  pyproject.toml  update_local_certs.sh
.github/workflows/: main.yml
docker/: docker-init.sh  nginx.conf
layout/: archives.html  banner.html  comment.html  item_note.html  note.html  page.html  paging.html
nginx/: dhparam.pem  nginx.conf
notes/: containers.md  gists.md  git.md  memo_distrib.md  unix.md
posts/2009/: 2009-07-12-mobilite-quand-tu-nous-tiens.md  2009-12-02-sfr-3g-et-ubuntu-9-10-karmic.md
posts/2010/: 2010-01-09-nouvelle-annee-nouvelle-distrib.md  2010-03-15-renaissance-de-pc-et-switch-dutilisatrice.md  2010-04-14-renaissance-et-longevite.md  2010-08-01-piwik-une-alternative-a-google-analytics.md  2010-12-12-video-pour-psp-avec-ffmpeg.md  2010-12-25-probleme-de-resolution-avec-xorg.md  2010-12-25-tiny-tiny-rss.md
posts/2011/: 2011-03-01-sortie-de-chive-0-4-1.md  2011-04-04-retour-en-auto-herbergement.md  2011-06-01-gnome-3-une-belle-rupture.md  2011-06-04-personnalisation-de-gnome-3.md  2011-06-04-sortie-de-chive-0-4-2.md  2011-07-26-chive-0-5-1.md  2011-07-26-switcher-dans-le-monde-de-l-entreprise.md  2011-09-17-bonne-rentree-a-tous.md  2011-09-29-le-moteur-de-blog-pluxml-evolue.md  2011-10-09-bilan-de-6-mois-d-auto-hebergement.md  2011-12-11-chive-a-muri.md  2011-12-30-la-version-noel-de-tiny-tiny-rss.md
posts/2014/: 2014-01-22-qmail.md  (+12 more)
static/: robots.txt
test/: test_slugify.py
(+97 files in other folders)
