[tool.poetry]
name = "blogduyax"
version = "1.0.0"
description = ""
authors = ["Yax"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Pygments = "^2.7.4"
mistune = "^0.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
