[tool.poetry]
name = "blogduyax"
version = "1.0.0"
description = ""
authors = ["Yax"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
requests = "^2.25.1"
Pygments = "^2.7.4"
mistune = "^2.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
