[project]
name = "blog"
version = "1.1"
description = "Blog du Yax"
authors = [
    { name = "Yax" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "requests>=2.31.0",
    "pygments>=2.17.1",
    "mistune>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.1",
    "pyinstaller>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
